test/compile_errors/stage1/obj/enum_with_0_fields.zig
const Foo = enum {};

// enum with 0 fields
//
// tmp.zig:1:13: error: enum declarations must have at least one tag
